[package]
name = "game-lens"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
image = "0.25.9"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
webpx = "0.1.3"
win-hotkeys = "0.5.1"
xcap = "0.8.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
wgc = "1.0.1"
windows = "0.62.2"

[[bench]]
name = "capture"
harness = false
